--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 body {
   margin:0;
   font-family: 'Montserrat', sans-serif;
+  background-color: rgb(250, 241, 232);
 }
 
 header {
   background-image: url("../img/header.jpg");
   background-position: center;
   background-size: cover;
-  
 }
 
 .overlay {
@@ -24,4 +24,28 @@ header h1 {
   color: white;
   text-transform: uppercase;
   font-size: 60px;
+}
+
+#short_disc {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#short_disc img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  object-position: 50% 90%;
+  padding: 30px;
+}
+
+#short_disc li {
+  list-style: none;
+  padding: 10px 0;
+}
+
+.emoji {
+  font-size: 20px;
+  padding-right: 10px;
 }
