--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ body {
   background-color: rgb(250, 241, 232);
 }
 
+ul {
+  padding-left: 0;
+}
+
 header {
   background-image: url("../img/header.jpg");
   background-position: center;
@@ -26,6 +30,10 @@ header h1 {
   font-size: 60px;
 }
 
+section {
+  padding: 50px 0;
+}
+
 #short_disc {
   display: flex;
   justify-content: space-around;
@@ -37,7 +45,6 @@ header h1 {
   height: 300px;
   object-fit: cover;
   object-position: 50% 90%;
-  padding: 30px;
 }
 
 #short_disc li {
@@ -48,4 +55,44 @@ header h1 {
 .emoji {
   font-size: 20px;
   padding-right: 10px;
+}
+
+#projects {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: white;
+}
+
+#projects div {
+  padding: 0 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(82, 6, 6, 0.1);
+  width: 25%;
+  height: 400px;
+  text-align: justify;
+}
+
+#projects img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border: solid white 1px;
+}
+
+#projects h3{
+  text-transform: uppercase;
+}
+
+#projects a {
+  text-align: center;
+  color: black;
+  text-decoration: none;
+}
+
+#projects p {
+  font-size: 13px;
 }
