--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,47 @@
 body {
   margin:0;
   font-family: 'Montserrat', sans-serif;
-  background-color: rgb(250, 241, 232);
+  background-color: rgb(247, 247, 247);
+}
+
+ul {
+  padding-left: 0;
 }
 
 header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: url("../img/header.jpg");
   background-position: center;
   background-size: cover;
+  height:150px;
+  padding: 20% 5%;
+}
+
+header .overlay {
+  border: white solid 3px;
 }
 
 .overlay {
   display: flex;
-  text-align: center;
-  width: 100%;
-  height:500px;
-  background-color: rgba(122, 121, 117, 0.5);
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(70, 70, 70, 0.8);
 }
+
 header h1 {
-  margin:0;
+  margin: 0;
   color: white;
   text-transform: uppercase;
   font-size: 60px;
+}
+
+section {
+  padding: 50px 0;
 }
 
 #short_disc {
@@ -37,7 +55,6 @@ header h1 {
   height: 300px;
   object-fit: cover;
   object-position: 50% 90%;
-  padding: 30px;
 }
 
 #short_disc li {
@@ -48,4 +65,60 @@ header h1 {
 .emoji {
   font-size: 20px;
   padding-right: 10px;
+}
+
+#projects {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: white;
+}
+
+#shelter {
+  background-image: url("../img/animal-shelter.jpg");
+  background-position: center;
+  background-size: cover;
+  width: 30%;
+  height: 300px;
+}
+
+#design {
+  background-image: url("../img/interior-design.jpg");
+  background-position: center;
+  background-size: cover;
+  width: 30%;
+  height: 300px;
+}
+
+#pets {
+  background-image: url("../img/pet.jpg");
+  background-position: center;
+  background-size: cover;
+  width: 30%;
+  height: 300px;
+}
+
+#projects img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border: solid white 1px;
+}
+
+#projects h3{
+  text-transform: uppercase;
+}
+
+#projects a {
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  width: 60%;
+  padding: 0 30px 20px;
+  border: 3px solid white;
+}
+
+#projects p {
+  font-size: 13px;
+  text-align: center;
 }
