--- a/css/styles.css
+++ b/css/styles.css
@@ -9,18 +9,39 @@ ul {
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url("../img/header.jpg");
-  background-position: center;
-  background-size: cover;
-  height:150px;
-  padding: 20% 5%;
+  width: 100%;
+  top: 0;
+  position: fixed;
+  background-color: rgb(247, 247, 247);
+  box-shadow: 1px 1px 10px 1px #c2c1bc;
 }
 
-header .overlay {
-  border: white solid 3px;
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 950px;
+  margin: auto;
+  height: 50px;
+}
+
+header ul {
+  text-align: right;
+}
+
+header li{
+  font-size: 1.2em;
+  display: inline-block;
+  text-transform: uppercase;
+  padding: 0 10px;
+}
+
+header h1 {
+  margin:0;
+  font-size: 1.2em;
+  font-weight: normal;
+  padding-left: 20px;
+  text-transform: uppercase;
 }
 
 .overlay {
@@ -33,28 +54,24 @@ header .overlay {
   background-color: rgba(70, 70, 70, 0.8);
 }
 
-header h1 {
-  margin: 0;
-  color: white;
-  text-transform: uppercase;
-  font-size: 60px;
-}
-
 section {
   padding: 50px 0;
 }
 
 #short_disc {
+  max-width: 950px;
+  margin: 50px auto 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
+#short_disc div {
+  max-width: 40%;
+}
+
 #short_disc img {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  object-position: 50% 90%;
+  max-width: 400px;
 }
 
 #short_disc li {
@@ -68,10 +85,11 @@ section {
 }
 
 #projects {
+  max-width: 1050px;
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: white;
 }
 
 #shelter {
