--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,11 @@ header li{
   padding: 0 10px;
 }
 
+header a {
+  text-decoration: none;
+  color: black;
+}
+
 header h1 {
   margin:0;
   font-size: 1.2em;
@@ -51,7 +56,7 @@ header h1 {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: rgba(70, 70, 70, 0.8);
+  background-color: rgba(71, 33, 33, 0.7);
 }
 
 section {
@@ -59,29 +64,59 @@ section {
 }
 
 #short_disc {
+  padding-top: 100px;
   max-width: 950px;
-  margin: 50px auto 0;
+  margin: auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
-
-#short_disc div {
-  max-width: 40%;
 }
 
 #short_disc img {
   max-width: 400px;
 }
 
-#short_disc li {
-  list-style: none;
-  padding: 10px 0;
+#short_disc p {
+  line-height:20px;
+  font-size:10px;
+  margin:80px;
+  font-family: 'Press Start 2P', monospace;
+  color: rgb(39, 204, 39);
 }
 
-.emoji {
-  font-size: 20px;
-  padding-right: 10px;
+.terminal {
+  background-image: url("../img/terminal.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#dot1 {
+  animation: dot1 1s infinite linear;
+}
+
+#dot2 {
+  animation: dot2 1s infinite linear;
+}
+
+#dot3 {
+  animation: dot3 1s infinite linear;
+}
+@keyframes dot1 {
+  0% { opacity: 1;}
+  50% { opacity: 0;}
+  100% { opacity: 0;}
+}
+
+@keyframes dot2 {
+  0% { opacity: 0;}
+  50% { opacity: 1;}
+  100% { opacity: 0;}
+}
+
+@keyframes dot3 {
+  0% { opacity: 0;}
+  50% { opacity: 0;}
+  100% { opacity: 1;}
 }
 
 #projects {
