--- a/css/styles.css
+++ b/css/styles.css
@@ -30,15 +30,22 @@ header ul {
 }
 
 header li{
-  font-size: 1.2em;
+  font-size: 0.9em;
   display: inline-block;
   text-transform: uppercase;
-  padding: 0 10px;
+  min-width: 60px;
 }
 
 header a {
   text-decoration: none;
   color: black;
+  padding: 0 20px;
+}
+
+header a:hover {
+  font-size: 1.1em;
+  transition: 0.5s;
+  padding: 0 17px;
 }
 
 header h1 {
@@ -49,15 +56,7 @@ header h1 {
   text-transform: uppercase;
 }
 
-.overlay {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(71, 33, 33, 0.7);
-}
+
 
 section {
   padding: 50px 0;
@@ -119,12 +118,22 @@ section {
   100% { opacity: 1;}
 }
 
-#projects {
+.container {
   max-width: 1050px;
   margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(71, 33, 33, 0.7);
 }
 
 #shelter {
@@ -174,4 +183,26 @@ section {
 #projects p {
   font-size: 13px;
   text-align: center;
+}
+
+#aboutme {
+  max-width: 900px;
+  margin: auto;
+  text-align: justify;
+}
+
+#aboutme h2 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 30px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+#aboutme div {
+  padding: 15px 30px 30px;
+}
+
+#contact img {
+  width: 15px;
 }
