--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,27 @@ body {
   background-color: rgb(247, 247, 247);
 }
 
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 30px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
 ul {
   padding-left: 0;
 }
+
+.container {
+  max-width: 1050px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+/** Header Styles **/
 
 header {
   width: 100%;
@@ -56,11 +74,11 @@ header h1 {
   text-transform: uppercase;
 }
 
-
-
 section {
   padding: 50px 0;
 }
+
+/** Home Section Styles **/
 
 #short_disc {
   padding-top: 100px;
@@ -89,6 +107,7 @@ section {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 #dot1 {
   animation: dot1 1s infinite linear;
 }
@@ -100,6 +119,7 @@ section {
 #dot3 {
   animation: dot3 1s infinite linear;
 }
+
 @keyframes dot1 {
   0% { opacity: 1;}
   50% { opacity: 0;}
@@ -118,53 +138,54 @@ section {
   100% { opacity: 1;}
 }
 
-.container {
-  max-width: 1050px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
+/** Projects Section Styles **/
 
-.overlay {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(71, 33, 33, 0.7);
+#design {
+  background-image: url("../img/interior-design.jpg");
+  background-size: cover;
 }
 
 #shelter {
   background-image: url("../img/animal-shelter.jpg");
-  background-position: center;
   background-size: cover;
-  width: 30%;
-  height: 300px;
-}
-
-#design {
-  background-image: url("../img/interior-design.jpg");
-  background-position: center;
-  background-size: cover;
-  width: 30%;
-  height: 300px;
 }
 
 #pets {
   background-image: url("../img/pet.jpg");
-  background-position: center;
   background-size: cover;
-  width: 30%;
+}
+
+.overlay {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+  background-color: rgba(68, 68, 68, 0.7);
+}
+
+.active {
+  width: 300px;
   height: 300px;
 }
 
-#projects img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border: solid white 1px;
+.active p {
+  padding: 0 15%;
+  font-size: 20px;
+  text-align: center;
+  color: white;
+}
+
+.active:hover .overlay{
+  display: flex;
+}
+
+.project_text:hover + .active .overlay{
+  display: flex;
+}
+
+#projects h2 {
+  text-align: center;
 }
 
 #projects h3{
@@ -173,17 +194,15 @@ section {
 
 #projects a {
   text-align: center;
-  color: white;
+  color: black;
   text-decoration: none;
-  width: 60%;
-  padding: 0 30px 20px;
-  border: 3px solid white;
 }
 
-#projects p {
-  font-size: 13px;
-  text-align: center;
+#projects .container {
+  padding: 15px 0;
 }
+
+/** About Me Section Styles **/
 
 #aboutme {
   max-width: 900px;
@@ -191,17 +210,11 @@ section {
   text-align: justify;
 }
 
-#aboutme h2 {
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 30px;
-  font-size: 30px;
-  font-weight: normal;
-}
-
 #aboutme div {
   padding: 15px 30px 30px;
 }
+
+/** Contact Section Styles **/
 
 #contact img {
   width: 15px;
