--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ header {
 }
 
 .terminal {
-  background-image: url("../img/terminal.png");
+  background-image: url("../img/terminal_sm.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -176,7 +176,7 @@ header {
   align-items: center;
   width: 300px;
   height: 300px;
-  background-color: rgba(68, 68, 68, 0.8);
+  background-color: white;
 }
 
 .active {
@@ -187,8 +187,6 @@ header {
 .active p {
   padding: 0 15%;
   font-size: 20px;
-  text-align: center;
-  color: white;
 }
 
 .active:hover .overlay{
@@ -200,21 +198,26 @@ header {
 }
 
 #projects {
-  background-color: white;
+  background-image: url("../img/terminal_lg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #projects h2 {
   text-align: center;
+  color: white;
 }
 
 #projects h3{
+  color: white;
   text-transform: uppercase;
   margin-top: 0;
 }
 
 #projects a {
   text-align: center;
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
@@ -278,6 +281,7 @@ header {
   align-items: center;
   padding: 15px 0;
 }
+
 #contact li {
   list-style: none;
   display: flex;
