--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ header {
   top: 0;
   position: fixed;
   background-color: rgb(247, 247, 247);
-  box-shadow: 1px 1px 10px 1px #302f2e;
+  box-shadow: 5px 5px 10px -5px #696868;
   z-index: 1;
 }
 
@@ -58,7 +58,6 @@ header {
   font-size: 0.9em;
   display: inline-block;
   text-transform: uppercase;
-  min-width: 60px;
 }
 
 .nav-bar a {
@@ -68,9 +67,11 @@ header {
 }
 
 .nav-bar a:hover {
-  font-size: 1.1em;
-  transition: 0.5s;
-  padding: 0 17px;
+  text-shadow:
+   -1px -1px 0 #33FF33,  
+    1px -1px 0 #33FF33,
+    -1px 1px 0 #33FF33,
+     1px 1px 0 #33FF33;
 }
 
 .nav-bar h1 {
@@ -84,21 +85,17 @@ header {
 
 /** Home Section Styles **/
 
-#short_disc {
+#home {
   padding-top: 100px;
-  max-width: 950px;
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
 
-#short_disc img {
+#home img {
   max-width: 400px;
   border-radius: 10px;
+  box-shadow: 5px 5px 10px -5px #696868;
 }
 
-#short_disc p {
+#home p {
   line-height:20px;
   font-size:10px;
   margin:90px 40px;
@@ -113,6 +110,7 @@ header {
   background-position: top;
   background-color: #242424;
   border-radius: 10px;
+  box-shadow: 5px 5px 10px -5px #696868;
 }
 
 #dot1 {
@@ -165,6 +163,7 @@ header {
   width: 25px;
   padding: 3px;
   border-radius: 0;
+  box-shadow: none;
 }
 
 /** Projects Section Styles **/
@@ -180,6 +179,7 @@ header {
   margin: auto;
   color: #33FF33;
   border-radius: 10px;
+  box-shadow: 5px 5px 10px -5px #696868;
 }
 
 #projects h3{
@@ -233,10 +233,6 @@ header {
   width: 320px;
 }
 
-.project_text:hover + .active .overlay{
-  display: flex;
-}
-
 #design {
   background-image: url("../img/interior-design.png");
   background-size: cover;
@@ -277,20 +273,38 @@ header {
   font-size: 20px;
 }
 
-.active:hover .overlay{
-  display: flex;
+/* For devices with hover function */
+@media (hover:hover) {
+  .active:hover .overlay{
+    display: flex;
+  }
+
+  .project_text:hover + .active .overlay{
+    display: flex;
+  }
 }
 
-#hover {
+/* For touch screens */
+@media (hover:none) {
+  .active:focus .overlay{
+    display: flex;
+  }
+
+  .overlay:focus {
+    display: none;
+  }
+}
+
+#pointer {
   position: absolute;
   top:-50px;
   right: 50px;
   width: 60px;
   height: 60px;
-  animation: hover .4s infinite linear;
+  animation: pointer .4s infinite linear;
 }
 
-@keyframes hover {
+@keyframes pointer {
   from { 
     top:-50px;
     right: 50px;
@@ -326,6 +340,7 @@ header {
   font-size: 10px;
   line-height: 20px;
   text-indent: 20px;
+  box-shadow: 5px 5px 10px -5px #696868;
 }
 
 /** Contact Section Styles **/
@@ -339,8 +354,11 @@ header {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top;
-  padding: 30px;
   border-radius: 10px;
+  box-shadow: 1px 1px 10px -5px #696868;
+  flex-wrap: wrap;
+  width: 350px;
+  padding: 15px 0;
 }
 
 #contacts li {
@@ -353,6 +371,28 @@ header {
 #contacts a {
   text-decoration: none;
   color: #1c1c1e;
+}
+
+#contacts h4 {
+  width: 100%;
+  font-weight: normal;
+  font-size: 15px;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 5px 0 0;
+}
+
+#contact_img {
+  width: 100%;
+  margin-top: 25px;
+}
+
+#gr_circle {
+  background-color: #ffafad;
+  display: block;
+  border-radius: 30px;
+  width: 60px;
+  margin: auto;
 }
 
 .title {
@@ -372,19 +412,6 @@ header {
   padding:3px 30px 3px 0;
 }
 
-#gr_circle {
-  background-color: #ffafad;
-  display: block;
-  border-radius: 25px;
-  border-bottom: none;
-  margin-bottom: 30px;
-}
-
-#name {
-  padding-bottom: 52px;
-  border-bottom: none;
-}
-
 form {
   background-image: url("../img/message_bar_sm.png");
   background-color: #242424;
@@ -397,6 +424,7 @@ form {
   justify-content: center;
   align-items: flex-end;
   flex-direction: column;
+  box-shadow: 5px 5px 10px -5px #696868;
 }
 
 input, textarea {
@@ -430,12 +458,14 @@ input:focus::placeholder, textarea:focus::placeholder {
   background-color: #33FF33;
   color: #242424;
 }
-/** Footer Section Styles **/
+
+/** Footer Styles **/
 
 footer {
+  margin-top: 30px;
   display: block;
   width: 100%;
-  box-shadow: -1px -1px 10px 1px #302f2e;
+  box-shadow: 0px -5px 10px -5px #696868;
   background-color: #242424;
 }
 
