--- a/css/styles.css
+++ b/css/styles.css
@@ -1,477 +1,503 @@
 body {
-  margin:0;
-  font-family: 'Montserrat', sans-serif;
-  background-color: rgb(247, 247, 247);
-  color: #242424;
+	margin: 0;
+	font-family: "Montserrat", sans-serif;
+	background-color: rgb(247, 247, 247);
+	color: #242424;
 }
 
 section {
-  padding: 50px 0;
+	padding: 50px 0;
 }
 
 h2 {
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 30px;
-  font-size: 30px;
-  font-family: 'Press Start 2P', monospace;
+	text-align: center;
+	text-transform: uppercase;
+	margin-top: 30px;
+	font-size: 30px;
+	font-family: "Press Start 2P", monospace;
 }
 
 ul {
-  padding-left: 0;
+	padding-left: 0;
 }
 
 .container {
-  max-width: 900px;
-  margin: auto;
-  padding: 15px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  position: relative;
+	max-width: 900px;
+	margin: auto;
+	padding: 15px 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	position: relative;
 }
 
 /** Header Styles **/
 
 header {
-  width: 100%;
-  top: 0;
-  position: fixed;
-  background-color: rgb(247, 247, 247);
-  box-shadow: 5px 5px 10px -5px #696868;
-  z-index: 1;
+	width: 100%;
+	top: 0;
+	position: fixed;
+	background-color: rgb(247, 247, 247);
+	box-shadow: 5px 5px 10px -5px #696868;
+	z-index: 1;
 }
 
 .nav-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 900px;
-  margin: auto;
-  height: 50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	max-width: 900px;
+	margin: auto;
+	height: 50px;
 }
 
 .nav-bar ul {
-  text-align: right;
+	text-align: right;
 }
 
-.nav-bar li{
-  font-size: 0.9em;
-  display: inline-block;
-  text-transform: uppercase;
+.nav-bar li {
+	font-size: 0.9em;
+	display: inline-block;
+	text-transform: uppercase;
 }
 
 .nav-bar a {
-  text-decoration: none;
-  color: #242424;
-  padding: 0 20px;
+	text-decoration: none;
+	color: #242424;
+	padding: 0 20px;
 }
 
 .nav-bar a:hover {
-  text-shadow:
-   -1px -1px 0 #33FF33,  
-    1px -1px 0 #33FF33,
-    -1px 1px 0 #33FF33,
-     1px 1px 0 #33FF33;
+	text-shadow: -1px -1px 0 #33ff33, 1px -1px 0 #33ff33, -1px 1px 0 #33ff33,
+		1px 1px 0 #33ff33;
 }
 
 .nav-bar h1 {
-  margin:0;
-  top: 0;
-  font-size: 1.2em;
-  font-weight: normal;
-  padding-left: 20px;
-  text-transform: uppercase;
+	margin: 0;
+	top: 0;
+	font-size: 1.2em;
+	font-weight: normal;
+	padding-left: 20px;
+	text-transform: uppercase;
 }
 
 /** Home Section Styles **/
 
 #home {
-  padding-top: 100px;
+	padding-top: 100px;
 }
 
 #home img {
-  max-width: 400px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px -5px #696868;
+	max-width: 400px;
+	border-radius: 10px;
+	box-shadow: 5px 5px 10px -5px #696868;
 }
 
 #home p {
-  line-height:20px;
-  font-size:10px;
-  margin:90px 40px;
-  font-family: 'Press Start 2P', monospace;
-  color: #33FF33;
+	line-height: 20px;
+	font-size: 10px;
+	margin: 90px 40px;
+	font-family: "Press Start 2P", monospace;
+	color: #33ff33;
 }
 
 .terminal {
-  background-image: url("../img/terminal_bar_sm.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top;
-  background-color: #242424;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px -5px #696868;
+	background-image: url("../img/terminal_bar_sm.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: top;
+	background-color: #242424;
+	border-radius: 10px;
+	box-shadow: 5px 5px 10px -5px #696868;
 }
 
 .dot1 {
-  animation: dot1 1s infinite linear;
+	animation: dot1 1s infinite linear;
 }
 
 .dot2 {
-  animation: dot2 1s infinite linear;
+	animation: dot2 1s infinite linear;
 }
 
 .dot3 {
-  animation: dot3 1s infinite linear;
+	animation: dot3 1s infinite linear;
 }
 
 @keyframes dot1 {
-  0% { opacity: 1;}
-  50% { opacity: 0;}
-  100% { opacity: 0;}
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 0;
+	}
 }
 
 @keyframes dot2 {
-  0% { opacity: 0;}
-  50% { opacity: 1;}
-  100% { opacity: 0;}
+	0% {
+		opacity: 0;
+	}
+
+	50% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+	}
 }
 
 @keyframes dot3 {
-  0% { opacity: 0;}
-  50% { opacity: 0;}
-  100% { opacity: 1;}
+	0% {
+		opacity: 0;
+	}
+
+	50% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
 
-
 #icons {
-  position: fixed;
-  width: 900px;
-  top: 42px;
-  z-index: 1;
-  margin-left: 8px;
+	position: fixed;
+	width: 900px;
+	top: 42px;
+	z-index: 1;
+	margin-left: 8px;
 }
 
 #icons ul {
-  width: 40px;
-  display: block;
-  float: right;
-  list-style: none;
-  text-align: center;
+	width: 40px;
+	display: block;
+	float: right;
+	list-style: none;
+	text-align: center;
 }
 
 #icons img {
-  width: 25px;
-  padding: 3px;
-  border-radius: 0;
-  box-shadow: none;
+	width: 25px;
+	padding: 3px;
+	border-radius: 0;
+	box-shadow: none;
 }
 
 /** Projects Section Styles **/
 
 #projects {
-  position: relative;
-  background-image: url("../img/terminal_bar.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top;
-  background-color: #242424;
-  max-width: 900px;
-  margin: auto;
-  color: #33FF33;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px -5px #696868;
+	position: relative;
+	background-image: url("../img/terminal_bar.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: top;
+	background-color: #242424;
+	max-width: 900px;
+	margin: auto;
+	color: #33ff33;
+	border-radius: 10px;
+	box-shadow: 5px 5px 10px -5px #696868;
 }
 
-#projects h3{
-  margin-top: 0;
+#projects h3 {
+	margin-top: 0;
 }
 
 #projects a {
-  text-align: center;
-  color: #33FF33;
+	text-align: center;
+	color: #33ff33;
 }
 
 #projects li {
-  font-size: 13px;
-  padding-bottom: 15px;
+	font-size: 13px;
+	padding-bottom: 15px;
 }
 
 .border-l {
-  position: absolute;
-  bottom: 0;
-  left:0;
-  width:4px;
-  height:4px;
-  background: #33FF33;
-  animation: border 5s linear infinite;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 4px;
+	height: 4px;
+	background: #33ff33;
+	animation: border 5s linear infinite;
 }
 
 .border-r {
-  position: absolute;
-  bottom: 0;
-  right:0;
-  width:4px;
-  height:4px;
-  background: #33FF33;
-  animation: border 5s linear infinite;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 4px;
+	height: 4px;
+	background: #33ff33;
+	animation: border 5s linear infinite;
 }
 
 @keyframes border {
-  0% {
-    width: 0;
-  }
+	0% {
+		width: 0;
+	}
 
-  50% {
-    width: 100%;
-  }
+	50% {
+		width: 100%;
+	}
 
-  100% {
-    width: 0;
-  }
+	100% {
+		width: 0;
+	}
 }
 
 .project_text {
-  font-family: 'Press Start 2P', monospace;
+	font-family: "Press Start 2P", monospace;
 }
 
 #design {
-  background-image: url("../img/interior-design.png");
-  background-size: cover;
+	background-image: url("../img/interior-design.png");
+	background-size: cover;
 }
 
 #shelter {
-  background-image: url("../img/animal-shelter.png");
-  background-size: cover;
+	background-image: url("../img/animal-shelter.png");
+	background-size: cover;
 }
 
 #pets {
-  background-image: url("../img/pets.png");
-  background-size: cover;
+	background-image: url("../img/pets.png");
+	background-size: cover;
 }
 
 .overlay {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  width: 275px;
-  height: 275px;
-  background-color: white;
-  border: #33FF33 solid 5px;
-  border-radius: 10px;
-  color: #242424;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	width: 275px;
+	height: 275px;
+	background-color: white;
+	border: #33ff33 solid 5px;
+	border-radius: 10px;
+	color: #242424;
 }
 
 .active {
-  width: 300px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	width: 300px;
+	height: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .active p {
-  padding: 0 15%;
-  font-size: 20px;
+	padding: 0 15%;
+	font-size: 20px;
 }
 
 /* For devices with hover function */
-@media (hover:hover) {
-  .active:hover .overlay{
-    display: flex;
-  }
+@media (hover: hover) {
+	.active:hover .overlay {
+		display: flex;
+	}
 
-  .project_text:hover + .active .overlay{
-    display: flex;
-  }
+	.project_text:hover + .active .overlay {
+		display: flex;
+	}
 }
 
 /* For touch screens */
-@media (hover:none) {
-  .active:focus .overlay{
-    display: flex;
-  }
+@media (hover: none) {
+	.active:focus .overlay {
+		display: flex;
+	}
 
-  .overlay:focus {
-    display: none;
-  }
+	.overlay:focus {
+		display: none;
+	}
 }
 
 #pointer {
-  position: absolute;
-  top: -45px;
-  margin-right:1%;
-  right: 0;
-  width: 60px;
-  height: 60px;
-  animation: pointer .4s infinite linear;
+	position: absolute;
+	top: -45px;
+	margin-right: 1%;
+	right: 0;
+	width: 60px;
+	height: 60px;
+	animation: pointer 0.4s infinite linear;
 }
 
 @keyframes pointer {
-  from { 
-    top: -45px;
-    right: 0;
-  }
-  to {
-    top:-42px;
-    right: 3px;
-  }
+	from {
+		top: -45px;
+		right: 0;
+	}
+
+	to {
+		top: -42px;
+		right: 3px;
+	}
 }
 
 /* About Me Section Styles */
 
 #aboutme img {
-  width: 200px;
+	width: 200px;
 }
 
 .terminal_wh {
-  background-image: url("../img/terminal_bar_sm.png");
-  background-color: white;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top;
-  padding: 30px 30px 5px;
-  width: 500px;
-  border-radius: 10px;
-  font-family: 'Press Start 2P', monospace;
-  font-size: 10px;
-  line-height: 20px;
-  text-indent: 20px;
-  box-shadow: 5px 5px 10px -5px #696868;
+	background-image: url("../img/terminal_bar_sm.png");
+	background-color: white;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: top;
+	padding: 30px 30px 5px;
+	width: 500px;
+	border-radius: 10px;
+	font-family: "Press Start 2P", monospace;
+	font-size: 10px;
+	line-height: 20px;
+	text-indent: 20px;
+	box-shadow: 5px 5px 10px -5px #696868;
 }
 
 /** Contact Section Styles **/
 
 #contacts {
-  display:flex;
-  justify-content: center;
-  align-items: flex-end;
-  background-image: url("../img/contacts_bar_sm.png");
-  background-color: white;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top;
-  border-radius: 10px;
-  box-shadow: 1px 1px 10px -5px #696868;
-  flex-wrap: wrap;
-  width: 350px;
-  padding: 15px 0;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	background-image: url("../img/contacts_bar_sm.png");
+	background-color: white;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: top;
+	border-radius: 10px;
+	box-shadow: 1px 1px 10px -5px #696868;
+	flex-wrap: wrap;
+	width: 350px;
+	padding: 15px 0;
 }
 
 #contacts li {
-  list-style:none;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  border-bottom: #e5e5ea solid .01px;
-  font-size: 13px;
+	list-style: none;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	border-bottom: #e5e5ea solid 0.01px;
+	font-size: 13px;
 }
 
 #contacts a {
-  text-decoration: none;
-  color: #242424;
+	text-decoration: none;
+	color: #242424;
 }
 
 #contacts h4 {
-  width: 100%;
-  font-weight: normal;
-  font-size: 15px;
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 5px 0 0;
+	width: 100%;
+	font-weight: normal;
+	font-size: 15px;
+	text-align: center;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	margin: 5px 0 0;
 }
 
 #contact_img {
-  width: 100%;
-  margin-top: 25px;
+	width: 100%;
+	margin-top: 25px;
 }
 
 #gr_circle {
-  background-color: #ffafad;
-  display: block;
-  border-radius: 30px;
-  width: 60px;
-  margin: auto;
+	background-color: #ffafad;
+	display: block;
+	border-radius: 30px;
+	width: 60px;
+	margin: auto;
 }
 
 .title {
-  text-align: right;
-  color: #8e8e93;
+	text-align: right;
+	color: #8e8e93;
 }
 
 .title li {
-  padding:3px 10px 3px 30px;
+	padding: 3px 10px 3px 30px;
 }
 
 .info {
-  text-align: left;
+	text-align: left;
 }
 
 .info li {
-  padding:3px 30px 3px 0;
+	padding: 3px 30px 3px 0;
 }
 
 form {
-  background-image: url("../img/message_bar_sm.png");
-  background-color: #242424;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top;
-  padding: 45px 30px 30px;
-  border-radius: 10px;
-  display:flex;
-  justify-content: center;
-  align-items: flex-end;
-  flex-direction: column;
-  box-shadow: 5px 5px 10px -5px #696868;
+	background-image: url("../img/message_bar_sm.png");
+	background-color: #242424;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: top;
+	padding: 45px 30px 30px;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	flex-direction: column;
+	box-shadow: 5px 5px 10px -5px #696868;
 }
 
-input, textarea {
-  width: 300px;
-  background-color: #242424;
-  border: #33FF33 solid .1px;
-  padding: 10px;
-  margin: 5px;
-  color: #33FF33;
-  font-family: 'Press Start 2P', monospace;
-  font-size: 10px;
-  border-radius: 5px;
+input,
+textarea {
+	width: 300px;
+	background-color: #242424;
+	border: #33ff33 solid 0.1px;
+	padding: 10px;
+	margin: 5px;
+	color: #33ff33;
+	font-family: "Press Start 2P", monospace;
+	font-size: 10px;
+	border-radius: 5px;
 }
 
-input::placeholder, textarea::placeholder {
-  color: #33FF33;
-  font-family: 'Press Start 2P', monospace;
+input::placeholder,
+textarea::placeholder {
+	color: #33ff33;
+	font-family: "Press Start 2P", monospace;
 }
 
-input:focus::placeholder, textarea:focus::placeholder {
-  color: #242424;
+input:focus::placeholder,
+textarea:focus::placeholder {
+	color: #242424;
 }
 
 #submit {
-  float: right;
-  width: 100px;
-  text-transform: lowercase;
+	float: right;
+	width: 100px;
+	text-transform: lowercase;
 }
 
 #submit:hover {
-  background-color: #33FF33;
-  color: #242424;
+	background-color: #33ff33;
+	color: #242424;
 }
 
 /** Footer Styles **/
 
 footer {
-  margin-top: 30px;
-  display: block;
-  width: 100%;
-  box-shadow: 0px -5px 10px -5px #696868;
-  background-color: #242424;
+	margin-top: 30px;
+	display: block;
+	width: 100%;
+	box-shadow: 0px -5px 10px -5px #696868;
+	background-color: #242424;
 }
 
 footer div {
-  margin:auto;
-  max-width: 900px;
-  padding: 15px 0;
-  color: #33FF33;
-  font-family: 'Press Start 2P', monospace;
-  font-size: 9px;
+	margin: auto;
+	max-width: 900px;
+	padding: 15px 0;
+	color: #33ff33;
+	font-family: "Press Start 2P", monospace;
+	font-size: 9px;
 }
